--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7099;http://localhost:5256"
+      "applicationUrl": "http://localhost:7099;http://localhost:5256"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -26,7 +26,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:3000;http://localhost:3001"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
@@ -45,8 +46,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44670",
-      "sslPort": 44373
+      "applicationUrl": "http://localhost:44670"    
+
     }
   }
 }
